Rename some classes with more relevant names
KibGroup -> MaterialGroup ; KibBlockType -> MaterialType ; ReactiveType -> ReactiveMaterial ; InteractableType -> InteractableMaterial