@@ -1,7 +1,7 @@
 package io.github.atrimilan.keepillegalblocks.core;
 
-import io.github.atrimilan.keepillegalblocks.core.types.KibGroup;
-import io.github.atrimilan.keepillegalblocks.core.types.ReactiveType;
+import io.github.atrimilan.keepillegalblocks.core.types.MaterialGroup;
+import io.github.atrimilan.keepillegalblocks.core.types.ReactiveMaterial;
 import io.github.atrimilan.keepillegalblocks.models.LoadResult;
 import org.bukkit.Material;
 import org.bukkit.block.data.BlockData;
@@ -50,13 +50,13 @@ class RegistryLoaderTest {
         doReturn(cocoaBD).when(registryLoader).getBlockData(any(Material.class));
 
         // Mock settings for REACTIVE
-        when(settings.getBlacklistedMaterialsForGroup(KibGroup.REACTIVE)).thenReturn(Collections.emptySet());
-        when(settings.getEnabledCategoriesForGroup(KibGroup.REACTIVE)).thenReturn(Set.of("cocoa"));
+        when(settings.getBlacklistedMaterialsForGroup(MaterialGroup.REACTIVE)).thenReturn(Collections.emptySet());
+        when(settings.getEnabledCategoriesForGroup(MaterialGroup.REACTIVE)).thenReturn(Set.of("cocoa"));
         when(materialRegistry.getReactiveCount()).thenReturn(10);
 
         // Stub loadRegistry for INTERACTABLE
         lenient().doReturn(5).when(registryLoader)
-                .loadRegistry(eq(settings), eq(KibGroup.INTERACTABLE), any(), any(), eq(false));
+                .loadRegistry(eq(settings), eq(MaterialGroup.INTERACTABLE), any(), any(), eq(false));
         when(materialRegistry.getInteractableCount()).thenReturn(20);
 
         // When
@@ -64,8 +64,8 @@ class RegistryLoaderTest {
 
         // Then
         verify(materialRegistry).clearAll();
-        verify(materialRegistry).registerReactive(cocoa, ReactiveType.COCOA);
-        verify(materialRegistry).registerReactive(cocoaBeans, ReactiveType.COCOA); // Placement material
+        verify(materialRegistry).registerReactive(cocoa, ReactiveMaterial.COCOA);
+        verify(materialRegistry).registerReactive(cocoaBeans, ReactiveMaterial.COCOA); // Placement material
         // INTERACTABLE was not registered because it is stubbed
 
         assertEquals(2, results.size());
